--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: We-Run-From-the-Hunted_66759
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 66759-h/images/cover.jpg
 creator:
   author:
     agent_name: Marlowe, Stephen
@@ -16,6 +19,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/32369
     wikipedia: https://en.wikipedia.org/wiki/Stephen_Marlowe
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66759#We-Run-From-the-Hunted
 gutenberg_issued: '2021-11-17'
 identifiers:
   gutenberg: '66759'
